--- a/app/src/main/res/layout/content_event_view.xml
+++ b/app/src/main/res/layout/content_event_view.xml
@@ -108,4 +108,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_month" />
+
+    <TextView
+        android:id="@+id/textview10"
+        android:layout_width="180dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="352dp"
+        android:text=""
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </android.support.constraint.ConstraintLayout>
